# Lorian-Workspace

./: .gitignore  AUTO_RELEASE_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DISCORD_BUTTONS_INFO.md  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-release.yml  ci.yml  quick-release.yml  release.yml
src/: main.rs
